Add: methods to get all accounts from db
