# backend/docs/swagger.yaml
@@ -60,6 +60,19 @@ info:
   version: "0.1"
 paths:
   /accounts:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/objects.AccountDTO'
+            type: array
+      summary: Retrieves all accounts
+      tags:
+      - Accounts
     post:
       parameters:
       - description: Account data
